Bug 1292181 - Let each dispatch event sends data to the socket. r=mcmanus, a=lizzard